# app

./: .gitignore  README.md  app.cabal  default.nix  definitions.nix  shell.nix
client/: Main.hs
common/: Common.hs
server/: Main.hs
