name:               app
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable server
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:   common, server
  main-is:          Main.hs
  ghc-options:      -O2 -threaded -Wall -Werror -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  default-language: Haskell2010
  other-modules:    Common
  build-depends:    aeson,
                    base < 5,
                    bytestring,
                    containers,
                    cryptonite,
                    http-types,
                    lens,
                    lucid,
                    miso,
                    mtl,
                    network-uri,
                    persistent,
                    persistent-sqlite,
                    persistent-template,
                    servant,
                    servant-lucid,
                    servant-server,
                    text,
                    wai,
                    wai-extra,
                    wai-cors,
                    warp

executable client
  if !impl(ghcjs)
    buildable: False
  hs-source-dirs:   common, client
  ghc-options:      -O2 -threaded -Wall -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  other-modules:    Common
  main-is:          Main.hs
  ghcjs-options:    -dedupe
  default-language: Haskell2010
  build-depends:    aeson,
                    base < 5,
                    containers,
                    ghcjs-base,
                    lens,
                    miso,
                    network-uri,
                    servant,
                    servant-client-ghcjs, 
                    text


